# rocketsim-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  flake.nix
.cargo/: config.toml
RocketSimC/: RocketSimC.cpp  RocketSimC.h  RocketSimC.vcxproj  RocketSimC.vcxproj.filters
src/: lib.rs  rl_constants.rs
src/rlsim/: ball_state.rs  car_state.rs  constants.rs  game_state.rs  mod.rs
