[package]
name = "rocketsim"
version = "0.1.0"
edition = "2021"
authors = [ "ash lea <example@thisismyactual.email>" ]

[dependencies]
libc = "0.2.139"
vector3 = "1.1.4"

[build-dependencies]
cc = "1.0.78"

# Make Release go really fast
[profile.release]
opt-level = 3
lto = true
# codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = true

