[package]
name = "rocketsim"
version = "0.1.0"
edition = "2021"
authors = [ "ash lea <example@thisismyactual.email>" ]

[dependencies]
glam = "0.22.0"
libc = "0.2.139"

[build-dependencies]
cc = "1.0.78"
glob = "0.3.1"
miette = { version = "5.5.0", features = ["fancy"] }

[features]
lto = []
fat-lto = []
